--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,16 @@
 language: haskell
+
+install:
+    # travis-ci currently does not run `cabal update`
+    # (see https://github.com/travis-ci/travis-build/pull/91)
+    #
+    # So we need to do it manually for now...
+    - cabal update
+    - git clone https://github.com/franckrasolo/pepino && cd pepino && cabal install && cd ..
+    - cabal install hspec hspec-discover HUnit rematch hunit-rematch
+    - cabal install --enable-tests
+
+script:
+    - cabal configure --enable-tests
+    - cabal build
+    - cabal test
