--- a/examples/examples.cabal
+++ b/examples/examples.cabal
@@ -1,25 +1,39 @@
-name:                 examples
-version:              0.0.0.0
-synopsis:             Examples of descriptive tests
-category:             Testing
-build-type:           Simple
-cabal-version:        >= 1.10
+name:                examples
+version:             0.0.0.0
+synopsis:            Examples of descriptive tests
+category:            Testing
+build-type:          Simple
+cabal-version:       >= 1.10
 
 library
-  default-language:   Haskell2010
+  default-language:  Haskell2010
 
-test-suite test
-  default-language:   Haskell2010
-  main-is:            Specs.hs
-  type:               exitcode-stdio-1.0
-  ghc-options:        -Wall
+test-suite readme
+  default-language:  Haskell2010
+  main-is:           README.lhs
+  type:              exitcode-stdio-1.0
+  ghc-options:       -Wall -Werror -pgmL markdown-unlit -optL haskell+literate
   default-extensions:
     GADTs,
     StandaloneDeriving
-  hs-source-dirs:     .
   build-depends:
-    base     >= 4.5 && <5,
-    hspec    >= 1.6,
-    hunit-rematch >= 0.1,
-    HUnit    >= 1.2,
-    rematch  >= 0.2
+    base           >= 4.5 && < 5,
+    markdown-unlit >= 0.2,
+    hspec          >= 1.6
+
+test-suite specs
+  default-language:  Haskell2010
+  main-is:           Spec.hs
+  type:              exitcode-stdio-1.0
+  ghc-options:       -Wall -Werror
+  default-extensions:
+    GADTs,
+    StandaloneDeriving
+  hs-source-dirs:    .
+  build-depends:
+    base           >= 4.5 && < 5,
+    hspec          >= 1.6,
+    hspec-discover >= 0.2,
+    hunit-rematch  >= 0.1,
+    HUnit          >= 1.2,
+    rematch        >= 0.2
