--- a/pepino.cabal
+++ b/pepino.cabal
@@ -37,7 +37,8 @@ library
   exposed-modules:   Pepino
   other-modules:
   build-depends:
-    base           >= 4.5 && < 5
+    base           >= 4.5 && < 5,
+    here           >= 1.2
 
 test-suite specs
   default-language:  Haskell2010
