--- a/pepino.cabal
+++ b/pepino.cabal
@@ -34,9 +34,12 @@ library
   default-language:  Haskell2010
   ghc-options:       -Wall -Werror
   hs-source-dirs:    core/src
-  exposed-modules:   Pepino
+  exposed-modules:
+    Pepino,
+    Pepino.Renderers.Ansi
   other-modules:
   build-depends:
+    ansi-wl-pprint >= 0.6,
     base           >= 4.5 && < 5,
     here           >= 1.2
 
@@ -44,7 +47,7 @@ test-suite specs
   default-language:  Haskell2010
   main-is:           Spec.hs
   type:              exitcode-stdio-1.0
-  hs-source-dirs:    core/tests
+  hs-source-dirs:    core/src, core/tests
   ghc-options:       -Wall -Werror -threaded -rtsopts -fno-warn-orphans
   build-depends:
     base           >= 4.5 && <5,
