--- a/pepino.cabal
+++ b/pepino.cabal
@@ -41,7 +41,7 @@ library
   build-depends:
     ansi-wl-pprint >= 0.6,
     base           >= 4.5 && < 5,
-    here           >= 1.2
+    template-haskell
 
 test-suite specs
   default-language:  Haskell2010
