--- a/pepino.cabal
+++ b/pepino.cabal
@@ -47,12 +47,14 @@ test-suite specs
   default-language:  Haskell2010
   main-is:           Spec.hs
   type:              exitcode-stdio-1.0
-  hs-source-dirs:    core/src, core/tests
+  hs-source-dirs:    core/tests
   ghc-options:       -Wall -Werror -threaded -rtsopts -fno-warn-orphans
   build-depends:
+    ansi-wl-pprint >= 0.6,
     base           >= 4.5 && <5,
     hspec          >= 1.6,
     hspec-discover >= 0.2,
     hunit-rematch  >= 0.1,
     HUnit          >= 1.2,
+    pepino,
     rematch        >= 0.2
